# paper-recommender

./: .gitignore  LICENSE  README.md  config.toml  pyproject.toml
.github/workflows/: ci.yml
arxiv_recommender/: __init__.py  arxiv_api.py  bibtex.py  config.py  db.py  embed.py  fetch.py  format.py  ingest.py  recommend.py  s2.py  server.py
tests/: conftest.py  test_benchmarks.py  test_bibtex.py  test_db.py  test_recommend.py
