[project]
name = "arxiv-recommender"
version = "0.1.0"
description = "Personal arXiv paper recommender (SPECTER2 embeddings + cosine similarity)"
requires-python = ">=3.11"
dependencies = [
    "bibtexparser>=1.4,<2",
    "numpy>=2.4.6",
    "requests>=2.34.2",
]

[project.scripts]
arxiv-ingest = "arxiv_recommender.ingest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arxiv_recommender"]
