[project]
name = "arxiv-recommender"
version = "0.1.0"
description = "Personal arXiv paper recommender (SPECTER2 embeddings + cosine similarity)"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.4,<5",
    "bibtexparser>=1.4,<2",
    "fastapi>=0.136.3",
    "loguru>=0.7.3",
    "numpy>=2.4.6",
    "requests>=2.32,<2.34",  # capped to coexist with arxiv's requests pin
    "uvicorn[standard]>=0.48.0",
]

[project.scripts]
arxiv-ingest = "arxiv_recommender.ingest:main"
arxiv-embed = "arxiv_recommender.embed:main"
arxiv-fetch = "arxiv_recommender.fetch:main"
arxiv-serve = "arxiv_recommender.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arxiv_recommender"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "vulture>=2.16",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["F", "I"]  # pyflakes (unused imports/vars) + isort

[tool.vulture]
paths = ["arxiv_recommender"]
min_confidence = 80
exclude = ["arxiv_recommender/__pycache__"]

[tool.pytest.ini_options]
testpaths = ["tests"]
